--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/android:api-31-alpha
+      - image: cimg/android:2021.09.1
         environment:
           JVM_OPTS: -Xmx3200m
 
